--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -30,6 +30,8 @@
     --pluto-operator-ligatures: none;
     --julia-mono-font-stack: JuliaMono, Menlo, "Roboto Mono", "Lucida Sans Typewriter", "Source Code Pro", monospace;
     --sans-serif-font-stack: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    --lato-ui-font-stack: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Cantarell, Helvetica, Arial, "Apple Color Emoji",
+        "Segoe UI Emoji", "Segoe UI Symbol", system-ui, sans-serif;
 
     color-scheme: light dark;
 }
@@ -901,24 +903,9 @@ main > preamble {
     pointer-events: none;
 }
 
-main > preamble #saveall-container {
-    margin-left: auto;
-    pointer-events: all;
-    right: min(0px, 700px + 25px - 100vw);
-    position: relative;
-    background: var(--overlay-button-bg);
-    color: var(--overlay-button-color);
-    padding: 5px 8px;
-    border: 3px solid var(--overlay-button-border);
-    border-radius: 12px;
-    height: 35px;
-    font-family: "Segoe UI Emoji", "Roboto Mono", monospace;
-    font-size: 0.75rem;
-    pointer-events: all;
-}
-
 .overlay-button {
     background: var(--overlay-button-bg);
+    color: var(--overlay-button-color);
     padding: 5px 8px;
     border: 3px solid var(--overlay-button-border);
     border-radius: 12px;
@@ -1695,7 +1682,7 @@ pkg-popup {
     border-radius: 10px;
     padding: 8px;
     overflow-wrap: break-word;
-    font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    font-family: var(--lato-ui-font-stack);
     opacity: 0;
     transform: scale(0.2);
     transform-origin: left;
