--- a/frontend/treeview.css
+++ b/frontend/treeview.css
@@ -49,7 +49,7 @@ pluto-tree > pluto-tree-prefix::before {
     bottom: -2px;
     opacity: 0.5;
     cursor: pointer;
-    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/caret-down-outline.svg);
+    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/caret-down-outline.svg");
     filter: var(--image-filters);
 }
 
