Add open button disable
- set disabled property for open button at start
- add an id to open button
- set an event handler for input event to editor state

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -155,6 +155,10 @@ pluto-filepicker button {
     border-bottom-left-radius: 0;
 }
 
+pluto-filepicker button:disabled {
+    cursor: not-allowed;
+}
+
 .cm-editor .cm-tooltip {
     border: 1px solid var(--cm-editor-tooltip-border-color);
     box-shadow: 3px 3px 4px rgb(0 0 0 / 20%);
