--- a/frontend/light_color.css
+++ b/frontend/light_color.css
@@ -188,6 +188,7 @@
         --index-text-color: hsl(0, 0, 60);
         --index-clickable-text-color: hsl(0, 0, 30);
         --docs-binding-bg: #8383830a;
+        --index-card-bg: white;
 
         /* HTML in codemirror! */
         --cm-html-color: #48b685;
