--- a/frontend/index.css
+++ b/frontend/index.css
@@ -15,7 +15,7 @@
     /* position: absolute; */
     /* left: 0; */
     /* right: 0; */
-    margin-top: 34vh;
+    margin-top: 14vh;
     /* bottom: 0; */
     /* margin: auto; */
     display: block;
@@ -44,7 +44,7 @@ body.error #title {
     font-size: 1.4em;
 }
 
-#title img {
+#title h1 img {
     height: 1.2em;
     margin-bottom: -0.27em;
     /* margin-right: -1.5em; */
@@ -61,8 +61,8 @@ body {
 }
 
 main {
-    width: 15em;
-    margin: 0 auto;
+    max-width: 53rem;
+    margin: 20vh auto;
     margin-top: 20vh;
     text-align: left;
     font-family: "Roboto Mono", monospace;
@@ -234,6 +234,8 @@ body.nosessions ul#new ~ * {
 
 #recent {
     margin-bottom: 8em;
+    max-height: 11.700000000000003em;
+    overflow-y: scroll;
 }
 
 #recent > li.recent {
@@ -301,4 +303,133 @@ body.loading loading-bar {
     100% {
         right: 0vw;
     }
+}
+
+:root {
+    --card-width: 16rem;
+}
+
+featured-card {
+    --card-border-radius: 10px;
+    --card-border-width: 3px;
+    --card-color: attr(data-color);
+    display: block;
+    /* width: var(--card-width); */
+    border: var(--card-border-width) solid var(--card-color);
+    border-radius: var(--card-border-radius);
+    margin: 10px;
+    padding-bottom: 0.3rem;
+    box-shadow: 1px 3px 12px 3px #00000021;
+    font-family: system-ui;
+    position: relative;
+    word-break: break-word;
+    hyphens: auto;
+    background: var(--index-card-bg);
+}
+
+.featured-source-notebooks {
+    display: grid;
+    /* grid-auto-columns: 50px; */
+    place-items: center;
+    align-items: start;
+    grid-template-columns: repeat(auto-fit, minmax(var(--card-width),1fr));
+    gap: 1rem;
+    justify-items: stretch;
+}
+
+featured-card .banner img {
+    --zz: calc(var(--card-border-radius) - var(--card-border-width));
+    width: 100%;
+    height: 8rem;
+    object-fit: cover;
+    /* background-color: hsl(16deg 100% 66%); */
+    background: var(--card-color);
+    border-radius: var(--zz) var(--zz) 0 0;
+}
+
+featured-card .author img {
+    --size: 1.6em;
+    margin: 0.4em 0.4em;
+    margin-bottom: -0.4em;
+    width: var(--size);
+    height: var(--size);
+    object-fit: cover;
+    border-radius: 100%;
+    background: #b6b6b6;
+    display: inline-block;
+    overflow: hidden;
+}
+
+featured-card a {
+    text-decoration: none;
+    /* font-weight: 800; */
+}
+
+featured-card a.banner {
+    display: flex;
+    
+}
+
+featured-card .author {
+    color: #737373;
+    font-weight: 600;
+}
+
+featured-card h3 a {
+    padding: 0.6em;
+    padding-bottom: 0;
+    -webkit-line-clamp: 2;
+    display: inline-block;
+    display: -webkit-inline-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+featured-card p {
+    margin: 0.6rem 0.8rem;
+    /* padding-top: 0; */
+    /* margin-block: 0; */
+    color: #838383;
+    -webkit-line-clamp: 4;
+    display: inline-block;
+    display: -webkit-inline-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+featured-card h3 {
+    margin: 0.6rem 0rem 0rem 0rem;
+}
+
+
+featured-card.big {
+    grid-column-end: span 2;
+    grid-row-end: span 2;
+    /* width: 2000px; */
+}
+
+
+featured-card.big .banner img {
+    height: 16rem;
+}
+
+
+
+featured-card.special::before {
+    content: "New!";
+    font-size: 1.4rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-style: italic;
+    display: block;
+    background: #fcf492;
+    color: #833bc6;
+    text-shadow: 0 0 1px #ff6767;
+    position: absolute;
+    transform: translateY(calc(-100% - -15px)) rotate(-5deg);
+    padding: 2px 19px;
+    left: -9px;
+    /* right: 51px; */
+    /* border: 2px solid #ffca62; */
+    pointer-events: none;
 }
