--- a/frontend/index.css
+++ b/frontend/index.css
@@ -157,6 +157,7 @@ pluto-filepicker button {
 
 pluto-filepicker button:disabled {
     cursor: not-allowed;
+    opacity: .7;
 }
 
 .cm-editor .cm-tooltip {
